<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>io.avaje</groupId>
    <artifactId>avaje-inject-parent</artifactId>
    <version>8.12-RC4</version>
  </parent>

  <artifactId>avaje-inject-generator</artifactId>
  <name>avaje inject generator</name>
  <description>annotation processor generating di as source code</description>
	<properties>
		<prism.directory>${project.build.directory}/generated-sources/prims</prism.directory>
	</properties>
  <dependencies>

    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-inject</artifactId>
      <version>8.12-RC4</version>
      <scope>provided</scope>
    </dependency>

<dependency>
	<groupId>com.jolira</groupId>
	<artifactId>hickory</artifactId>
	<version>1.0.0</version>
      <optional>true</optional>
      <scope>provided</scope>
</dependency>
    <!-- test dependencies -->
    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>junit</artifactId>
      <version>1.1</version>
      <scope>test</scope>
    </dependency>

  </dependencies>


  <build>
    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <source>11</source>
          <target>11</target>
          <compilerArgument>-proc:none</compilerArgument>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>
            --add-opens io.avaje.inject.generator/io.avaje.inject.generator=ALL-UNNAMED
          </argLine>
        </configuration>
      </plugin>


			<plugin>
				<groupId>org.bsc.maven</groupId>
				<artifactId>maven-processor-plugin</artifactId>
         <version>4.0-rc1</version>
				<configuration>
					<defaultOutputDirectory>${prism.directory}</defaultOutputDirectory>
					<processors>
						<processor>net.java.dev.hickory.prism.internal.PrismGenerator</processor>
					</processors>
				</configuration>
				<executions>
					<execution>
						<id>process</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>process</goal>
						</goals>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>com.jolira</groupId>
						<artifactId>hickory</artifactId>
						<version>1.0.0</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
        <version>3.3.0</version>
				<executions>
					<execution>
						<id>add-source</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>${prism.directory}</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
    </plugins>
  </build>

</project>
